--- a/index.html
+++ b/index.html
@@ -31,30 +31,20 @@
             background: #334155;
         }
     </style>
-    <!-- React and dependencies via ESM -->
     <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
-  }
-}
-</script>
-    <!-- Babel for in-browser JSX/TSX transformation -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    {
+      "imports": {
+        "react": "https://esm.sh/react@^19.2.3",
+        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+        "react/": "https://esm.sh/react@^19.2.3/",
+        "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+      }
+    }
+    </script>
+    <!-- 入力ポイントとなるスクリプトを追加 -->
+    <script type="module" src="./index.tsx"></script>
 </head>
 <body>
     <div id="root"></div>
-    <!-- 
-      GitHub Pages等の環境でビルドなしで実行するための設定。
-      ブラウザで直接TSXをコンパイルします。
-    -->
-    <script type="text/babel" data-type="module" data-presets="react,typescript">
-      import "./index.tsx";
-    </script>
 </body>
 </html>
