--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boywithdv | Flutter Developer Portfolio</title>
+    <title>boywithdv | Flutter Expert</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --bg-color: #02040a;
+            --accent-color: #6366f1;
+        }
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #020617; /* slate-950 */
-            color: #f8fafc;
+            background-color: var(--bg-color);
+            color: #f0f6fc;
+            margin: 0;
+            overflow-x: hidden;
         }
         .mono {
             font-family: 'JetBrains Mono', monospace;
         }
+        .bg-grid {
+            background-image: radial-gradient(circle at 2px 2px, rgba(99, 102, 241, 0.05) 1px, transparent 0);
+            background-size: 40px 40px;
+        }
         ::-webkit-scrollbar {
-            width: 8px;
+            width: 6px;
         }
         ::-webkit-scrollbar-track {
-            background: #020617;
+            background: #02040a;
         }
         ::-webkit-scrollbar-thumb {
-            background: #1e293b;
-            border-radius: 4px;
+            background: #161b22;
+            border-radius: 10px;
         }
         ::-webkit-scrollbar-thumb:hover {
-            background: #334155;
+            background: #30363d;
         }
     </style>
     <script type="importmap">
@@ -41,10 +50,8 @@
       }
     }
     </script>
-    <!-- 入力ポイントとなるスクリプトを追加 -->
-    <script type="module" src="./index.tsx"></script>
 </head>
-<body>
+<body class="bg-grid">
     <div id="root"></div>
 </body>
 </html>
