feat: Add base tag for GitHub Pages deployment
Includes a `<base>` tag in `index.html` to correctly resolve asset paths when the application is deployed to a GitHub Pages subdirectory.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 
+      GitHub Pagesでサブディレクトリ（例: /repo-name/）に配置される場合、
+      この <base> タグが画像やスクリプトのパス解決を助けます。
+      必要に応じて <base href="/リポジトリ名/"> のように書き換えてください。
+    -->
+    <base href="./">
     <title>boywithdv | Flutter Expert</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
