--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Required for GitHub Pages sub-directory hosting -->
+    <!-- Required for GitHub Pages sub-directory path resolution -->
     <base href="./">
     <title>boywithdv | Flutter Engineer</title>
     
@@ -27,7 +27,6 @@
             background-image: radial-gradient(circle at 1px 1px, rgba(99, 102, 241, 0.08) 1px, transparent 0);
             background-size: 32px 32px;
         }
-        /* Loading Spinner */
         #loading-screen {
             position: fixed;
             inset: 0;
@@ -57,8 +56,8 @@
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "@google/genai": "https://esm.sh/@google/genai@1.34.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
@@ -66,26 +65,30 @@
 <body class="bg-grid">
     <div id="loading-screen">
         <div class="spinner"></div>
-        <p style="margin-top: 1rem; font-family: 'JetBrains Mono', monospace; font-size: 12px; color: #475569;">INITIALIZING SYSTEM...</p>
+        <p style="margin-top: 1rem; font-family: 'JetBrains Mono', monospace; font-size: 10px; color: #475569; letter-spacing: 0.2em;">BOOTING SYSTEM...</p>
     </div>
     
     <div id="root"></div>
 
     <script>
-        // Simple helper to hide loading screen once React mounts
+        // Diagnostic helper to alert the user if the app fails to mount due to server MIME settings
         window.addEventListener('load', () => {
-            const root = document.getElementById('root');
-            // If the root is still empty after a few seconds, there might be a MIME error
             setTimeout(() => {
+                const root = document.getElementById('root');
                 if (root && root.innerHTML === "") {
-                    console.error("React failed to mount. This is likely due to .tsx MIME type issues on GitHub Pages.");
-                    document.getElementById('loading-screen').innerHTML = 
-                        '<p style="color: #ef4444; font-family: monospace; text-align: center; padding: 20px;">' +
-                        'CRITICAL: Failed to load application modules.<br>' +
-                        '<span style="font-size: 10px; color: #64748b;">Check browser console for MIME type errors.</span>' +
-                        '</p>';
+                    console.error("App failed to mount. Checking for MIME issues.");
+                    const loader = document.getElementById('loading-screen');
+                    if (loader) {
+                        loader.innerHTML = `
+                            <div style="text-align: center; color: #ef4444; font-family: 'JetBrains Mono', monospace; padding: 20px;">
+                                <p style="font-weight: bold;">[ SYSTEM_FAILURE ]</p>
+                                <p style="font-size: 12px; margin-top: 8px;">Failed to load ES modules. This is likely due to the server serving .tsx files with the wrong MIME type (octet-stream).</p>
+                                <p style="font-size: 10px; color: #4b5563; margin-top: 16px;">CONSULT CONSOLE FOR TRACE</p>
+                            </div>
+                        `;
+                    }
                 }
-            }, 5000);
+            }, 6000);
         });
     </script>
 </body>
